# test-nitro-enclaves

./: .gitmodules  Cargo.toml  Dockerfile  README.md  allocator.yml  cf.yaml  client.ts  deno.json  server.ts
.zed/: settings.json
enclave/: Cargo.toml  deno.json  main.ts  server.ts
enclave-app/: Cargo.toml
enclave-app/enclave/: Cargo.toml
enclave-app/enclave/src/: main.rs
enclave-app/host/: Cargo.toml
enclave/src/: main.rs  protocol_helpers.rs
host/: deno.json  main.ts
